fix/Table header align

--- a/bfg-main/bfg-ui/src/app/features/search/file-search/file-search/file-search.component.scss
+++ b/bfg-main/bfg-ui/src/app/features/search/file-search/file-search/file-search.component.scss
@@ -62,6 +62,10 @@
     .mat-table {
         width: 100%;
 
+        .mat-header-cell {
+            padding-right: 8px;
+        }
+
         .mat-cell, .mat-cell > button {
             word-wrap: break-word !important;
             white-space: unset !important;
@@ -72,8 +76,7 @@
             -moz-hyphens: auto;
             -webkit-hyphens: auto;
             hyphens: auto;
-            padding-left: 4px;
-            padding-right: 4px;
+            padding-right: 8px;
         }
 
         .mat-column-service {
